--- a/SecureDoc/posts/templates/posts/post_detail.html
+++ b/SecureDoc/posts/templates/posts/post_detail.html
@@ -78,7 +78,7 @@
             document.getElementById("share_e").onclick = shareDoc;
 
             var doc = "{{post.document|escapejs}}";
-            console.log("Doc from DB is: " + doc);
+            console.log("Doc from DB is                 : " + doc);
             var key = "{{cipher.key}}";
             var iv = "{{cipher.iv}}";
             var edit_option = "{{ cipher.edit_options }}";
@@ -95,6 +95,8 @@
             key = key.toString(CryptoJS.enc.Base64);
             console.log("Key being used to decrypt is: " + key);
             var decrypted = CryptoJS.AES.decrypt(doc, key, {iv: iv});
+            console.log("Decrypted doc is            :" + decrypted.toString(CryptoJS.enc.Utf8));
+            console.log("Decrypted doc is            :" + decrypted);
             CKEDITOR.instances["foo"].setData(decrypted.toString(CryptoJS.enc.Utf8));
 
 			function encrypt(){
@@ -102,22 +104,22 @@
 			    var doc = CKEDITOR.instances["foo"].getData();
 			    var encrypted = CryptoJS.AES.encrypt(doc, key,  {iv: iv});
                 document.getElementById("test").value = encrypted;
-
+                console.log("(In encry) Doc being sent to DB: " + encrypted);
                 return false;
             }
 
             function shareDoc() {
                 console.log("In Share");
 			    var doc = CKEDITOR.instances["foo"].getData();
-			    console.log("Doc is: " + doc);
+			    console.log("Doc is                         : " + doc);
 			    key = "{{cipher.key}}";
 
 
 			    var encrypted = CryptoJS.AES.encrypt(doc, key,  {iv: iv});
-			    console.log("Key used is encrypted       : " + key);
+			    console.log("Key used is encrypted          : " + key);
                 document.getElementById("doc").value = encrypted;
                 document.getElementById("doc2").value = encrypted;
-                console.log("Passing: " + document.getElementById("doc").value)
+                console.log("(In Share) Doc being sent to DB: " + encrypted);
             }
 
         </script>
