Users can download files as .pdf

--- a/SecureDoc/posts/templates/posts/post_detail.html
+++ b/SecureDoc/posts/templates/posts/post_detail.html
@@ -16,6 +16,8 @@
 
     {% block content %}
 
+        test - {{ response }}
+
     <div class="container">
         <form method="POST" action="{% url 'posts:update' %}">
             {% csrf_token %}
@@ -39,7 +41,7 @@
         </form>
 
 
-        <form method="POST" action="{% url 'posts:generate_pdf' %}">
+        <form method="POST" action="{% url 'posts:download' %}">
             {% csrf_token %}
             <br/>
             <input type="hidden" name="doc2pdf" id="doc2pdf">
