--- a/SecureDoc/posts/templates/posts/post_detail.html
+++ b/SecureDoc/posts/templates/posts/post_detail.html
@@ -16,8 +16,6 @@
 
     {% block content %}
 
-        test - {{ response }}
-
     <div class="container">
         <form method="POST" action="{% url 'posts:update' %}">
             {% csrf_token %}
@@ -41,13 +39,23 @@
         </form>
 
 
-        <form method="POST" action="{% url 'posts:download' %}">
+        <form method="POST" action="{% url 'posts:download_pdf' %}">
             {% csrf_token %}
             <br/>
             <input type="hidden" name="doc2pdf" id="doc2pdf">
-            <input type="hidden" name="post_id_to_share" value={{post.id}} >
+            <input type="hidden" name="post_id_pdf" value={{post.id}} >
             <button class="btn btn-primary" type="submit" value="pdf" id="toPDF">
                 <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span> Export to PDF
+            </button>
+        </form>
+
+        <form method="POST" action="{% url 'posts:download_doc' %}">
+            {% csrf_token %}
+            <br/>
+            <input type="hidden" name="html2doc" id="html2doc">
+            <input type="hidden" name="post_id_to_share" value={{post.id}} >
+            <button class="btn btn-primary" type="submit" value="doc" id="todoc">
+                <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span> Export to docx
             </button>
         </form>
 
@@ -106,6 +114,7 @@
             document.getElementById("share_v").onclick = shareDoc;
             document.getElementById("share_e").onclick = shareDoc;
             document.getElementById("toPDF").onclick = toPDF;
+            document.getElementById("todoc").onclick = todoc;
 
             var doc = "{{post.document|escapejs}}";
             var key = "{{cipher.key}}";
@@ -145,6 +154,11 @@
             function toPDF() {
 			    var doc = CKEDITOR.instances["foo"].getData();
                 document.getElementById("doc2pdf").value = doc;
+            }
+
+            function todoc() {
+			    var doc = CKEDITOR.instances["foo"].getData();
+                document.getElementById("html2doc").value = doc;
             }
 
 
