Changed downloaded file names

--- a/SecureDoc/accounts/templates/accounts/login.html
+++ b/SecureDoc/accounts/templates/accounts/login.html
@@ -34,7 +34,7 @@
                     <br />
 
                     <br />
-                    <input type="password" name="password" placeholder="Password" class="form-control"/>
+                    <input type="password" name="password1" placeholder="Password" class="form-control"/>
                     <br /><br/>
 
                     <input input class="btn btn-primary btn-lg btn-block" type="submit" value="Login" >
