--- a/SecureDoc/posts/templates/posts/post_detail.html
+++ b/SecureDoc/posts/templates/posts/post_detail.html
@@ -28,10 +28,10 @@
                 {% load wysiwyg %}
                 {% wysiwyg_setup %}
 
-                <textarea id="foo" name="document"></textarea>
+                <textarea id="editor" name="document"></textarea>
                 <input type="hidden" name="test" id="test">
 
-                {% wysiwyg_editor "foo" %}
+                {% wysiwyg_editor "editor" %}
 
                 <br/>
                 <th>
@@ -150,17 +150,17 @@
 
             key = key.toString(CryptoJS.enc.Base64);
             var decrypted = CryptoJS.AES.decrypt(doc, key, {iv: iv});
-            CKEDITOR.instances["foo"].setData(decrypted.toString(CryptoJS.enc.Utf8));
+            CKEDITOR.instances["editor"].setData(decrypted.toString(CryptoJS.enc.Utf8));
 
             function encrypt(){
-			    var doc = CKEDITOR.instances["foo"].getData();
+			    var doc = CKEDITOR.instances["editor"].getData();
 			    var encrypted = CryptoJS.AES.encrypt(doc, key,  {iv: iv});
 			    document.getElementById("test").value = encrypted;
 			    return false;
             }
 
             function shareDoc() {
-			    var doc = CKEDITOR.instances["foo"].getData();
+			    var doc = CKEDITOR.instances["editor"].getData();
 			    key = "{{cipher.key}}";
 
 			    var encrypted = CryptoJS.AES.encrypt(doc, key,  {iv: iv});
@@ -169,12 +169,12 @@
             }
 
             function toPDF() {
-			    var doc = CKEDITOR.instances["foo"].getData();
+			    var doc = CKEDITOR.instances["editor"].getData();
 			    document.getElementById("doc2pdf").value = doc;
             }
 
             function todoc() {
-			    var doc = CKEDITOR.instances["foo"].getData();
+			    var doc = CKEDITOR.instances["editor"].getData();
 			    document.getElementById("html2doc").value = doc;
             }
         </script>
